// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with an image as the lead asset 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <ModalImage
          aspectRatio={1.7777777777777777}
          caption="Some Caption"
          credits="Some Credits"
          highResSize={1440}
          uri="https://crop169.io"
        />
      </View>
      <View>
        <View>
          <ArticleLabel
            color="#1D1D1B"
            title="Some Label"
          />
        </View>
        <Text
          selectable={true}
        >
          Some Headline
        </Text>
        <Text
          accessibilityRole="heading"
          aria-level="2"
        >
          Some Standfirst
        </Text>
        <View>
          <View>
            <NewArticleFlag />
          </View>
        </View>
      </View>
      <View>
        <View>
          <Text>
            <ArticleBylineWithLinks
              ast={
                Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Some byline",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ]
              }
            />
          </Text>
        </View>
        <View>
          <Text>
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "An image caption",
              "credits": "The image credits",
            }
          }
          imageOptions={
            Object {
              "display": "primary",
              "ratio": "1500:1000",
              "uri": "https://image.io",
            }
          }
        />
      </View>
    </View>
    <View>
      <Text
        accessibilityRole="link"
      >
        Some Link
      </Text>
    </View>
    <View>
      <View>
        <Text
          selectable={true}
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View>
        <PullQuote
          caption="AName"
          captionColour="#1D1D1B"
          quoteColour="#1D1D1B"
          text="a text"
          twitter="@AName"
        >
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View>
        <Video
          accountId="57838016001"
          height={421.875}
          policyKey="1.2.3.4"
          poster={
            Object {
              "uri": "https://image.io",
            }
          }
          skySports={false}
          videoId="4084164751001"
          width={750}
        />
        <View>
          <View>
            <Text>
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleTopics
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </View>
    </View>
    <View>
      <RelatedArticles
        slice={
          Object {
            "__typename": "StandardSlice",
            "items": Array [
              Object {
                "article": Object {
                  "__typename": "Article",
                  "byline": Array [],
                  "hasVideo": false,
                  "headline": "RA Headline",
                  "id": "ra-1",
                  "label": "RA Label",
                  "leadAsset": Object {
                    "__typename": "Image",
                    "crop169": Object {
                      "__typename": "Crop",
                      "url": "https://racrop169.io",
                    },
                    "crop32": Object {
                      "__typename": "Crop",
                      "url": "https://racrop32.io",
                    },
                    "title": "RA Title",
                  },
                  "publicationName": "TIMES",
                  "publishedTime": "2015-03-23T19:39:39.000Z",
                  "shortHeadline": "Headline",
                  "shortIdentifier": "2k629tpvh",
                  "slug": "this-is-slug",
                  "summary105": Array [],
                  "summary125": Array [],
                  "summary145": Array [],
                  "summary160": Array [],
                  "summary175": Array [],
                  "summary225": Array [],
                  "url": "https://ra.io",
                },
              },
            ],
            "sliceName": "StandardSlice",
          }
        }
      />
    </View>
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. an article with a video as the lead asset 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Video
          accountId="5436121857001"
          height={421.875}
          policyKey="1.2.3.4"
          poster={
            Object {
              "uri": "https://video169.io",
            }
          }
          videoId="5831024132001"
          width={750}
        />
      </View>
      <View>
        <View>
          <VideoLabel
            color="#1D1D1B"
            title={null}
          />
        </View>
        <Text
          selectable={true}
        >
          Some Headline
        </Text>
      </View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text
          selectable={true}
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. an article with no lead asset 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View />
      <View>
        <Text
          selectable={true}
        >
          Some Headline
        </Text>
      </View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text
          selectable={true}
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;
